syntax = "proto3";

service auth {
  rpc authenticate (AuthRequest) returns (AuthReply) {}
}

message  AuthRequest {
  string account  = 1;
  string password = 2;
}

message  AuthReply       {
  bool   isAuthenticated = 1;
  string error           = 2;
  string account         = 3;
  string name            = 4;
  string first           = 5;
  string last            = 6;
  string email           = 7;
  string depart          = 8;
  string avatar          = 9;
}
